Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- News Document have a flexible part to handle multiple links
Bug fixes:
~~~~~~~~~~
- fix #454: Invalid widget css class in edition. This css class was hardcoded in
  CPSUrlWidget.
- fix popup_rte size bug: now popup window is resizable
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- splitting macros in progress
- fix for #453 makes accessible javascript library
- Experimental support for layout clusters in portal types.