@@ -8,9 +8,11 @@ Bug fixes:
 ~~~~~~~~~~
 - fix #454: Invalid widget css class in edition. This css class was hardcoded in
   CPSUrlWidget.
+- Modified the event document layout so that it uses the more powerful and
+  accessible "Text Widget" instead of the "Rich Text Editor Widget".
 - fix popup_rte size bug: now popup window is resizable
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - splitting macros in progress
-- fix for #453 makes accessible javascript library
+- fix for #453 makes accessible JavaScript library
 - Experimental support for layout clusters in portal types.
